force-app/main/default/objects/Engaged_Organisation__c/Engaged_Organisation__c.object-meta.xml
<CustomObject>
    <label>Engaged Organisation</label>
    <nameField>
        <displayFormat>EO-{0000000}</displayFormat>
        <label>Engaged Organisation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engaged Organisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>