force-app/main/default/objects/Engaged_Organisation__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Engaged Organisations</relationshipLabel>
    <relationshipName>Engaged_Organisations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>