force-app/main/default/objects/Engaged_Organisation__c/fields/Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Level__c</fullName>
    <label>Engagement Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial enquiry</fullName>
            </value>
            <value>
                <fullName>Engagement with a view to involve them</fullName>
            </value>
            <value>
                <fullName>Formally engaged with them and have a contract to procure them</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>