force-app/main/default/objects/Engaged_Organisation__c/fields/Name_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Contact__c</fullName>
    <label>Name of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>