force-app/main/default/objects/Engaged_Organisation__c/fields/Organisation_Role__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Role__c</fullName>
    <label>Organisation Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service provider</fullName>
            </value>
            <value>
                <fullName>Manager of the SIB</fullName>
            </value>
            <value>
                <fullName>Technical support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>