force-app/main/default/objects/Engaged_Organisation__c/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <label>Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VCSE or another service provider</fullName>
            </value>
            <value>
                <fullName>External advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>